# lab-04-boost_filesystem

./: .travis.yml  CMakeLists.txt  README.md
include/: Analys.h  analysis.hpp
misc/ftp/otkritie/: readme.txt
scripts/: checks.sh  run.sh
sources/: Analys.cpp  main.cpp
test/: test.cpp
